Test und Ergebnisse hinzufügen funktioniert

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/EnergyFussl/notenmanagment#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mysql": "^2.15.0",
     "request": "^2.83.0"
